<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/selected_category"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_home" />

        <action
            android:id="@+id/action_HomeSecondFragment_to_DetailFragment"
            app:destination="@id/navigation_detail" />

        <argument
            android:name="categoryId"
            app:argType="string" />

        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gmail.eamosse.imdb.ui.dashboard.DashboardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_DashboardFragement_to_DetailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.gmail.eamosse.imdb.ui.detail.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="movieId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.gmail.eamosse.imdb.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_DetailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>
</navigation>